@@ -99,6 +99,7 @@ function workflow_revert_workflow_history_alter(&$variables) {
     }
     else {
       // Let's ask other modules if the reversion is allowed. Reversing old and new sid!
+      // @todo D8: remove, or replace by 'transition pre'. See WorkflowState::getOptions().
       $permitted = module_invoke_all('workflow', 'transition permitted', $transition->new_sid, $old_sid, $entity, $force = FALSE, $entity_type, $field_name, $transition);
       // Stop if a module says so.
       if (!in_array(FALSE, $permitted, TRUE)) {
